[package]
name = "h2"
# When releasing to crates.io:
# - Update CHANGELOG.md.
# - Create git tag
version = "0.4.15"
license = "MIT"
authors = [
  "Carl Lerche <me@carllerche.com>",
  "Sean McArthur <sean@seanmonstar.com>",
]
description = "A sans-I/O HTTP/2 client and server"
documentation = "https://docs.rs/h2"
repository = "https://github.com/hyperium/h2"
readme = "README.md"
keywords = ["http", "sans-io", "non-blocking"]
categories = ["network-programming", "web-programming"]
exclude = ["fixtures/**", "ci/**"]
edition = "2021"
rust-version = "1.63"

[features]
# Enables **unstable** APIs. Any API exposed by this feature has no backwards
# compatibility guarantees. In other words, you should not use this feature for
# anything besides experimentation. Definitely **do not** publish a crate that
# depends on this feature.
unstable = []

[workspace]
members = [
    "util/genfixture",
    "util/genhuff",
]

[dependencies]
atomic-waker = "1.0.0"
bytes = "1"
http = "1.1"
tracing = { version = "0.1.35", default-features = false, features = ["std"] }
fnv = "1.0.5"
slab = "0.4.2"
indexmap = { version = "2", features = ["std"] }

[dev-dependencies]

# Fuzzing
quickcheck = { version = "1.0.3", default-features = false }
rand = "0.8.4"

# HPACK fixtures
hex = "0.4.3"
walkdir = "2.3.2"
serde = "1.0.0"
serde_json = "1.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(fuzzing)"] }

